<resources>
    <string name="app_name">Walk Tracker</string>
    <string name="appwidget_text">Last Walk</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget">No Walk is added yet please try starting and finishing a walk first</string>
    <string name="walk_type_image">Walk Type Image</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="start_time">Start Time :</string>
    <string name="end_time">End Time :</string>
    <string name="date">Date :</string>
    <string name="distance">Distance :</string>
    <string name="calorie_burn">Calorie Burn :</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="distance_in_meters">Distance in Meters</string>
    <string name="auto_calculated">Calculated for Distance</string>
    <string name="save_first_dialog">If you exit the walk data will be lost</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="walk_details">Walk Details</string>
    <string name="name_of_app">Walk Tracker</string>
    <string name="distanceText">Distance : %1$s meters</string>
    <string name="dateText">Date : %1$s</string>
    <string name="timeText">%1$s - %2$s</string>
    <string name="user_weight">User Weight</string>

    <string name="walk_deleted">Walk Deleted</string>
    <string name="walk_saved">Walk Saved</string>

    <string name="startKey" translatable="false">start</string>
    <string name="endKey" translatable="false">end</string>
    <string name="dateKey" translatable="false">date</string>

    <string name="toSave" translatable="false">toSave</string>
    <string name="idWalk" translatable="false">idWalk</string>
    <string name="weight" translatable="false">weight</string>
    <string name="default_weight" translatable="false">0</string>

    <string name="weight_msg">Please Select a valid weight from 1 Kg to 200 Kg</string>
    <string name="channel_desc_fcm">Firebase Cloud Messaging</string>
    <string name="channel_desc_walk">Walking Status</string>
    <string name="valid_distance">Please enter a valid distance</string>
    <string name="start_walk">Walk is ongoing press finish to stop</string>
    <string name="finish_run">Finish Run</string>

    <string name="forWhat" translatable="false">for</string>
    <string name="time_text">Time From Started :</string>


</resources>
